Make app production-ready for Render + Vercel + Neon deployment
- Add multi-stage Dockerfile with Tesseract OCR for backend
- Fix SQL migration to use PostgreSQL-compatible syntax (GENERATED ALWAYS AS IDENTITY, TEXT)
- Make CORS origins configurable via CORS_ALLOWED_ORIGINS env var
- Use JDBC_DATABASE_URL and PORT env vars for production config
- Add VITE_API_URL env var support in frontend API client
- Set H2 to PostgreSQL compatibility mode for consistent dev/prod behavior
- Fix ActivityLog entity to use TEXT column instead of @Lob for PostgreSQL

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>